Змінив текст в кафедрах

--- a/special/higher/3.html
+++ b/special/higher/3.html
@@ -99,20 +99,8 @@
 							/>
 						</div>
 						<div class="flex__text">
-							HR - management - душа та серце кожної компанії, підприємства та
-							організації. Лише профі задасть темп, створить клімат і відкриє
-							потенціал кожного! Саме такі навички легко отримати, вивчаючи
-							кадровий менеджмент, управління кар’єрою та трудовим потенціалом,
-							кадрове діловодство, фізіологію і психологію праці, управління та
-							мотивацію персоналу, управління виробничими конфліктами, аудит
-							персоналу та сучасний рекрутинг, маркетинг, демографію та
-							національну економіку тощо. Випускники володіють знаннями та
-							практичними навичками відбору, оцінки та мотивації персоналу,
-							кар’єрного коучингу, управління кадровим резервом; удосконалення
-							систем і технологій управління персоналом, інжинірингу праці;
-							проведення корпоративних тренінгів, організації ділових зустрічей
-							і конференц-сервісу. ЕМКД платформа росту успішних професіоналів!
-							З нами рости легко!
+							Випускники магістерської програми стають  кваліфікованими фахівцями з управління людськими ресурсами (HR – HUMAN RESOURCES), що володіють фундаментальними знаннями і практичними навиками відбору, оцінки, навчання, мотивації персоналу, кар’єрного коучингу, управління кадровим резервом; формування кадрової політики компанії та оптимізації її організаційної структури; кадрового діловодства; розробки програм корпоративної соціальної відповідальності, удосконалення систем і технологій управління персоналом, оцінки соціально-економічної ефективності їх впровадження; інжинірингу праці; проведення корпоративних тренінгів, організації ділових зустрічей і конференц-сервісу.
+							Програма готує компетентних фахівців у сфері економіки праці та управління персоналом підприємств, організацій, професіоналів у галузі праці та зайнятості,  а також установ різних форм власності та господарювання.
 
 							<div class="flex__center mt-20">
 								<a
