--- a/special/higher/6.html
+++ b/special/higher/6.html
@@ -102,18 +102,8 @@
 							/>
 						</div>
 						<div class="flex__text">
-							Під час навчання за освітньою програмою «Менеджмент» студенти
-							вивчають основи менеджменту, операційний, виробничий,
-							інноваційний, інформаційний менеджмент та новітні ІТ в управлінні,
-							маркетинг, логістику, контролінг, стратегічне і тактичне
-							планування, управління конкурентоспроможністю, лідерство та
-							сучасні комунікації. Випускники з менеджменту організацій
-							отримують уміння здійснення управлінської діяльності на керівних
-							посадах підприємств, установ, організацій, державних та
-							недержавних структур виробничої та невиробничої сфери, навички з
-							прийняття рішень при виконанні функціональних обов'язків, з
-							вивчення і прогнозування кон'юнктури ринку товарів, робіт і
-							послуг, проведення заходів з адаптацій до вимог сучасності.
+							Програма підготовки магістрів за даною програмою орієнтована на менеджерів і фахівців інших спеціальностей із досвідом роботи в різноманітних підприємствах та організаціях на різних рівнях управління, що бажають систематизувати свій професійний досвід, вивчити сучасний управлінський інструментарій на основі досвіду успішних українських і міжнародних компаній, розширити мережу професійних контактів (рівень – «бакалавр» і «магістр»). Фахівці з менеджменту бізнес-організацій отримують навички здійснення управлінської діяльності на керівних посадах підприємств, установ, організацій усіх форм  власності, прийняття рішень при виконанні функціональних обов'язків, вивчення і прогнозування кон'юнктури ринку товарів, робіт і послуг, проведення заходів по адаптації до ринкових умов. 
+							Випускники, які отримали освіту за даною спеціальністю, можуть займати такі посади: керівники суб’єктів господарювання різної форми власності;  керівники структурних підрозділів підприємств та об’єднань різних галузей економіки; керівники місцевих органів влади; менеджери (управителі) об’єднань підприємств, установ, організацій та їх підрозділів.
 						</div>
 						<div class="flex__center mt-20">
 							<a
