--- a/special/higher/8.html
+++ b/special/higher/8.html
@@ -104,15 +104,8 @@
 							/>
 						</div>
 						<div class="flex__text">
-							Під час навчання за даною освітньою програмою студенти отримують
-							знання з організації комерційної та біржової діяльності, блокчейн
-							технології, маркетингу послуг та інтернет маркетингу, реалізації
-							цінової та асортиментної політики, електронної комерції, рекламної
-							діяльності та SMM, ведення онлайн бізнесу, бренд-менеджменту та
-							розробки інтернет стратегій просування. Випускники готові до
-							роботи у торговельних, посередницьких, дистрибуційних,
-							представницьких, консалтингових фірмах та організаціях, на
-							вітчизняних та міжнародних біржах
+							Магістерська програма спрямована на підготовку фахівців з організації та моделювання власного бізнесу, створення та розвитку стартапів, ведення ефективної  підприємницької діяльності в різних сферах економіки, зокрема в торгівлі та біржовій діяльності  з використанням традиційних та новітніх методів (інтернет-трейдинг, електронна комерція та ін.) та набуттям практичних навичок роботи на платформах фондових, валютних і товарних бірж.
+							Випускники здатні виконувати професійну роботу в різних підрозділах підприємств та організацій усіх форм власності та організаційно-правових форм (комерційні, некомерційні, державні, муніципальні тощо) у якості керівників, керівників структурних підрозділів або виконавців різноманітних служб апарату управління; в органах державного та місцевого самоврядування; на підприємствах малого та середнього бізнесу, що створені за власною ініціативою; в науково-дослідницьких організаціях, пов’язаних з вирішенням управлінських проблем.
 						</div>
 						<div class="flex__center mt-20">
 							<a
