--- a/special/middle/10.html
+++ b/special/middle/10.html
@@ -66,11 +66,11 @@
 								<a href="https://kntuua.github.io/University/abitur/1.html">
 									<i class="fas fa-arrow-circle-left"></i>
 								</a>
-								<a href="http://pksm.kntu.kr.ua/" target="_blank">
+								<a href="http://kbpz.kntu.kr.ua/" target="_blank">
 									<i class="fas fa-university"></i>
 								</a>
 								<a
-									href="https://facebook.com/groups/cntu.pksm/"
+									href="https://m.facebook.com/groups/itkntu/"
 									target="_blank"
 								>
 									<i class="fab fa-facebook-square"></i>
@@ -102,28 +102,11 @@
 							/>
 						</div>
 						<div class="flex__text">
-							Під час навчання за спеціальністю студенти вивчають новітні
-							IT-технології, розробку та створення WEB-орієнтованих програмних
-							систем на сучасних мовах програмування: С/С++, Assembler, Python,
-							Visual C#, Microsoft DOT NET Framework, Java, Android API, HTML,
-							CSS, JavaScript, PHP, MySQL, ASP.NET, WordPress, SQL, XML,
-							Interbase, Oracle та інших. Програмування мобільних систем різного
-							призначення на основі операційних систем Android, FreeRTOS,
-							LuaRTOS, платформи NodeMCU і систем супутникового
-							геопозиціонування. Опановують програмування систем управління
-							об'єктом на основі технології "Internet OfThings". Вивчають основи
-							проектування і розробки комп'ютерних мереж, управління та
-							адміністрування комп'ютерними мережами. Випускники зможуть
-							працювати на посадах: WEB-програміст; WEB-дизайнер; програміст
-							мобільних систем; консультант з ІТ-систем; керівник проектів в
-							області ІТ; інженер-програміст; тестувальник програмного
-							забезпечення; прикладний програміст; системний програміст;
-							програміст баз даних; інженер з комп’ютерних систем;
-							проектувальник комп’ютерних мереж; системний адміністратор і
-							багато інших посад в рамках IT-технологій З розвитком інноваційної
-							економіки та ринку інформаційних технологій потреба в IT-фахівцях
-							і програмістах в області мережевих та мобільних технологій
-							неухильно зростає.
+							З розвитком інноваційної економіки та ринку інформаційних технологій потреба в IT-фахівцях та програмістах невпинно зростає. Випускники ОП «Комп’ютерна інженерія» <a target="_blank" href="http://kbpz.kntu.kr.ua/123bak/">дізнатись більше</a> зможуть гарантовано працевлаштуватися на таких посадах згідно з Національним класифікатором України: технік із системного адміністрування, технік-програміст, фахівець з інформаційних технологій, фахівець з комп'ютерної графіки (дизайну), фахівець з розробки та тестування програмного забезпечення, фахівець з розроблення комп'ютерних програм, технік із конфігурованої комп'ютерних систем, технік із структурованої кабельної системи, технік інформаційно-обчислювального центру. Також  наші випускники успішно працюють WEB-програмістами, WEB-дизайнерами, програмістами мобільних систем, консультантами з ІТ-систем, керівниками ІТ-проєктів, інженер-програмістами, тестувальниками програмного забезпечення (QA-інженерами); прикладними програмістами, системними програмістами, програмістами баз даних, інженерами з комп’ютерних систем, проектувальниками комп’ютерних мереж, системними адміністраторами і на інших посадах сфери IT 
+							<a target="_blank" href="http://kbpz.kntu.kr.ua/vupysk/">дізнатись більше</a>.
+								Під час навчання за ІТ-спеціальністю “Комп’ютерна інженерія” <a target="_blank" href="http://kbpz.kntu.kr.ua/pravstyp/">дізнатись більше</a>  здобувачі вищої освіти вивчають новітні IT-технології, опановують розробку WEB-орієнтованих програмних систем на сучасних мовах програмування С/С++, Python, Visual C#, Microsoft DOT NET Framework, Java, Android API, HTML, CSS, JavaScript, PHP, MySQL, ASP.NET, WordPress, SQL, XML, Interbase, Oracle та ін. Наші студенти опановують проектування і розробку комп'ютерних мереж, управління й адміністрування комп'ютерних мереж. Детально з освітньою програмою можна ознайомитися на вебсайті кафедри <a target="_blank" href="http://kbpz.kntu.kr.ua/">дізнатись більше</a>.
+								Після навчання за бакалаврською освітньою програмою наші випускники мають можливість продовжити навчання на магістерській ОП «Комп’ютерна інженерія» <a target="_blank" href="http://kbpz.kntu.kr.ua/123mag/">дізнатись більше</a> і здобути ступінь магістра з комп’ютерної інженерії.
+								Будь айтішним! Вступай на ІТ-спеціальність ЦНТУ <a target="_blank" href="http://kbpz.kntu.kr.ua/infbyk/">дізнатись більше</a>.
 						</div>
 						<div class="flex__center mt-20">
 							<a
