--- a/special/middle/11.html
+++ b/special/middle/11.html
@@ -99,29 +99,11 @@
 							/>
 						</div>
 						<div class="flex__text">
-							В умовах інформаційної війни спеціальність «Кібербезпека» зараз,
-							як ніколи, актуальна для нашої країни. Об’єкти професійної
-							діяльності випускників: об’єкти інформатизації, включаючи
-							комп’ютерні, автоматизовані, телекомунікаційні, інформаційні,
-							інформаційно-аналітичні, інформаційно-телекомунікаційні системи,
-							інформаційні ресурси і технології; технології забезпечення безпеки
-							інформації; процеси управління інформаційною та/або кібербезпекою
-							об’єктів, що підлягають захисту. Цілі навчання: підготовка
-							фахівців, здатних використовувати і впроваджувати технології
-							інформаційної та/або кібербезпеки. Основні мови та технології
-							програмування, які викладаються:С++, Visual C++, Visual C#, Java,
-							Android API, Assembler, HTML, CSS, JavaScript, PHP, MySQL, SQL і
-							т.д. Фахівці готуються організовувати й підтримувати комплекс
-							заходів щодо забезпечення інформаційної безпеки з урахуванням
-							їхньої правової обґрунтованості, адміністративно-управлінської й
-							технічної реалізації, економічної доцільності, можливих зовнішніх
-							впливів, імовірних загроз і рівня розвитку технологій захисту
-							інформації. Фахівець може працювати в підрозділах великих
-							підприємств та установ, забезпечуючи захист комп’ютерних систем та
-							мереж, у відділах спецслужб та правозахисних органів для захисту
-							кіберпростору та інформаційних даних, здійснювати забезпечення
-							захищеної комп’ютеризованої діяльності банків та фінансових
-							установ, виконувати функції розробника систем захисту інформації
+							Спеціальність «Кібербезпека» <a target="_blank" href="http://kbpz.kntu.kr.ua/125kib/">дізнатись більше</a>  нині є вкрай актуальною і затребуваною у всіх царинах економіки України і світу – від галузі ІТ до спецслужб, банківської сфери, критичної інфраструктури, комунікацій тощо. 
+							Наші випускники <a target="_blank" href="http://kbpz.kntu.kr.ua/vupysk/">дізнатись більше</a> є фахівцями з використання й впровадження технологій інформаційного захисту, кібербезпеки, а тому згідно з Національним класифікатором України можуть успішно працювати спеціалістом із організації інформаційної безпеки (Security Specialist). Окрім цього, є можливим працювати у сфері ІТ: прикладними програмістами, інженер-програмістами, тестувальниками програмного забезпечення (QA-інженерами), програмістами мобільних систем, консультантами з ІТ-систем, системними програмістами, програмістами баз даних, інженерами з комп’ютерних систем, проектувальниками комп’ютерних мереж, системними адміністраторами, WEB-програмістами і на інших ІТ-посадах.
+							«Кібербезпека» є спеціальністю галузі знань 12 «Інформаційні технології», тому наші студенти ґрунтовно опановують також програмування, проектування комп’ютерних систем та мереж, тестування програмних продуктів та інші дисципліни сфери ІТ.
+							Здобувши кваліфікацію бакалавра з кібербезпеки, наші випускники-бакалаври мають можливість вступу й продовження навчання для здобуття ступеня магістра за ІТ-спеціальністю 122 Комп’ютерні науки <a target="_blank" href="http://kbpz.kntu.kr.ua/122mag/">дізнатись більше</a> 
+							або 123 Комп’ютерна інженерія <a target="_blank" href="http://kbpz.kntu.kr.ua/123mag/">дізнатись більше</a>.
 						</div>
 						<div class="flex__center mt-20">
 							<a
