--- a/special/middle/22.html
+++ b/special/middle/22.html
@@ -104,20 +104,8 @@
 							/>
 						</div>
 						<div class="flex__text">
-							Під час навчання за даною освітньою програмою студенти отримують
-							знання з теорії публічного адміністрування, конституційного права,
-							основ місцевого самоврядування, державного регулювання економіки
-							та економічної політики, територіального управління, планування
-							розвитку територій, публічних фінансів, комунікації в публічному
-							управлінні, технологій публічного адміністрування, PR-технологій,
-							проєктного менеджменту, соціального розвитку територій,
-							інформаційно-аналітичного забезпечення публічного адміністрування.
-							Випускники освітньої програми мають можливість обіймати посади
-							керівників структурних підрозділів органів державного,
-							регіонального та місцевого управління, керівного працівника
-							апарату центральних органів державної та місцевої влади,
-							керівників громадських організацій, міжнародних фондів,
-							недержавних організацій різних форм власності.
+							Під час навчання за даною спеціальністю студенти отримують знання з теорії публічного адміністрування, конституційного права, основ місцевого самоврядування, державного регулювання економіки та економічної політики, територіального управління, планування розвитку територій, публічних фінансів, комунікації в публічному управлінні, технологій публічного адміністрування, PR-технологій, проєктного менеджменту, соціального розвитку територій, інформаційно-аналітичного забезпечення публічного адміністрування.
+							Випускники здатні обіймати посади керівників, провідних і головних спеціалістів міністерств та інших центральних органів виконавчої влади, спеціалістів місцевих державних адміністрацій, закладах вищої освіти, академічних установ, корпоративних установ та бізнес-структур, їх управлінь і відділів; посади радників, консультантів секретаріатів місцевих рад, політичних партій та громадських організацій, спеціалістів виконавчих органів місцевих рад, спеціалістів виконавчих органів сільських, селищних рад та громад.
 						</div>
 						<div class="flex__center mt-20">
 							<a
