--- a/special/middle/24.html
+++ b/special/middle/24.html
@@ -70,7 +70,7 @@
 									<i class="fas fa-university"></i>
 								</a>
 								<a
-									href="https://facebook.com/groups/cntu.pksm/"
+									href="https://m.facebook.com/groups/itkntu/"
 									target="_blank"
 								>
 									<i class="fab fa-facebook-square"></i>
@@ -102,28 +102,12 @@
 							/>
 						</div>
 						<div class="flex__text">
-							Бакалаври за освітньою програмою “Комп’ютерні науки” готуються для
-							роботи в галузі комп’ютерних наук, а також набувають навичок
-							застосовувати математичні методи й алгоритмічні принципи в
-							моделюванні, проектуванні, розробці та супроводі інформаційних
-							технологій, здійснювати розробку, впровадження і супровід
-							інтелектуальних систем аналізу й обробки даних організаційних,
-							технічних, природничих і соціально-економічних систем. Об’єкти
-							професійної діяльності випускників:математичні, інформаційні,
-							імітаційні моделі реальних явищ, об’єктів, систем і процесів,
-							предметних областей, подання даних і знань; методи і технології
-							отримання, зберігання, обробки, передачі та використання
-							інформації, інтелектуального аналізу даних і прийняття рішень;
-							теорія, аналіз, розробка, оцінка ефективності, реалізація
-							алгоритмів, високопродуктивні обчислення, у тому числі паралельні
-							обчислення та великі дані. Теоретичний зміст предметної області:
-							сучасні моделі, методи, алгоритми, технології, процеси та способи
-							отримання, представлення, обробки, аналізу, передачі, зберігання
-							даних в інформаційних системах. Під час навчання за спеціальністю
-							студенти вивчають новітні IT-технології та мови програмування:
-							С/С++,Assembler, Python,Visual C#, Microsoft DOT NET Framework
-							Java, Android API, HTML, CSS, JavaScript, PHP, MySQL, ASP.NET
-							,WordPress, DrupalSQL, XML, Paradox, Interbase, Oracleі інші.
+							Бакалаври за освітньою програмою “Комп’ютерні науки” <a target="_blank" href="http://kbpz.kntu.kr.ua/122bak-2">дізнатись більше</a> готуються для працевлаштування за посадами згідно з Національним класифікатором професій прикладними програмістами, інженерами з програмного забезпечення, адміністраторами баз даних, програмістами (бази даних), адміністраторами даних, інженер-програмістами,  адміністраторами доступу, адміністраторами систем, системними програмістами.
+							Наші студенти набувають навичок в моделюванні, проектуванні, розробці та супроводі інформаційних технологій, а також розроблення, впровадження і супроводу інтелектуальних систем аналізу й обробки даних організаційних, технічних, природничих, соціально-економічних систем. Здобувачі вищої освіти за ІТ-спеціальністю “Комп’ютерні науки” <a target="_blank" href="http://kbpz.kntu.kr.ua/pravstyp/">дізнатись більше</a> під час навчання вивчають новітні IT-технології й мови програмування, серед яких Python, Visual C#, С/С++, Microsoft DOT NET, Framework Java, Android API, HTML, CSS, JavaScript, PHP, MySQL, ASP.NET, WordPress, DrupalSQL, XML, Paradox, Interbase, Oracle і інші.
+							Наші випускники-бакалаври гарантовано мають можливість вступу й продовження навчання за магістерською ОП «Комп’ютерні науки»
+							<a target="_blank" href="http://kbpz.kntu.kr.ua/122mag/">дізнатись більше</a> та здобути ступінь магістра з комп’ютерних наук.
+							Будь айтішним – вступай на ІТ-спеціальність ЦНТУ
+							<a target="_blank" href="http://kbpz.kntu.kr.ua/infbyk/">дізнатись більше</a>
 						</div>
 						<div class="flex__center mt-20">
 							<a
