--- a/special/higher/10.html
+++ b/special/higher/10.html
@@ -66,13 +66,10 @@
 								<a href="https://kntuua.github.io/University/abitur/2.html">
 									<i class="fas fa-arrow-circle-left"></i>
 								</a>
-								<a href="http://pksm.kntu.kr.ua/" target="_blank">
+								<a href="http://kbpz.kntu.kr.ua/" target="_blank">
 									<i class="fas fa-university"></i>
 								</a>
-								<a
-									href="https://facebook.com/groups/cntu.pksm/"
-									target="_blank"
-								>
+								<a href="https://m.facebook.com/groups/itkntu/" target="_blank">
 									<i class="fab fa-facebook-square"></i>
 								</a>
 							</div>
@@ -102,28 +99,63 @@
 							/>
 						</div>
 						<div class="flex__text">
-							Під час навчання за спеціальністю студенти вивчають новітні
-							IT-технології, розробку та створення WEB-орієнтованих програмних
-							систем на сучасних мовах програмування: С/С++, Assembler, Python,
-							Visual C#, Microsoft DOT NET Framework, Java, Android API, HTML,
-							CSS, JavaScript, PHP, MySQL, ASP.NET, WordPress, SQL, XML,
-							Interbase, Oracle та інших. Програмування мобільних систем різного
-							призначення на основі операційних систем Android, FreeRTOS,
-							LuaRTOS, платформи NodeMCU і систем супутникового
-							геопозиціонування. Опановують програмування систем управління
-							об'єктом на основі технології "Internet OfThings". Вивчають основи
-							проектування і розробки комп'ютерних мереж, управління та
-							адміністрування комп'ютерними мережами. Випускники зможуть
-							працювати на посадах: WEB-програміст; WEB-дизайнер; програміст
-							мобільних систем; консультант з ІТ-систем; керівник проектів в
-							області ІТ; інженер-програміст; тестувальник програмного
-							забезпечення; прикладний програміст; системний програміст;
-							програміст баз даних; інженер з комп’ютерних систем;
-							проектувальник комп’ютерних мереж; системний адміністратор і
-							багато інших посад в рамках IT-технологій З розвитком інноваційної
-							економіки та ринку інформаційних технологій потреба в IT-фахівцях
-							і програмістах в області мережевих та мобільних технологій
-							неухильно зростає.
+							З розвитком інноваційної економіки та ринку інформаційних
+							технологій потреба в IT-фахівцях та програмістах невпинно зростає.
+							Випускники ОП «Комп’ютерна інженерія»
+							<a target="_blank" href="http://kbpz.kntu.kr.ua/123mag/"
+								>дізнатись більше</a
+							>
+							готуються для роботи в галузі програмування, розробки та супроводу
+							комп’ютерних програм, а також для проєктування та обслуговування
+							комп’ютерних систем і мереж. Потреба у фахівцях, які вміють
+							ефективно експлуатувати сучасне програмне забезпечення та
+							комп’ютерну техніку, а також кваліфіковано розробляти нові
+							програми, на сьогодні, неухильно зростає. Інтегральна
+							компетентність: здатність розв’язувати складні спеціалізовані
+							задачі та практичні проблеми в галузі комп’ютерної інженерії або у
+							процесі навчання, що передбачає застосування досліджень та/або
+							здійснення інновацій та характеризується невизначеністю умов і
+							вимог. Ступінь магістра передбачає більш глибоке освоєння теорії
+							за обраним профілем, а також підготовку студента до
+							науково-дослідної або педагогічної діяльності за обраним напрямом.
+							Посади, на яких зможуть працювати випускники згідно з ДК 003:2010:
+							професіонали в галузі фізичних, математичних та технічних наук,
+							професіонали в галузі обчислень комп’ютеризації, професіонали в
+							галузі обчислювальних систем, наукові співробітники обчислювальні
+							системи, розробники обчислювальних систем, адміністратор системи,
+							інженер з програмного забезпечення комп’ютерів, професіонали в
+							галузі програмування, наукові співробітники програмування,
+							розробники комп’ютерних програм, інженер-програміст, програміст
+							база даних, програміст прикладний; професіонали в інших галузях
+							обчислень комп’ютеризації, інженер із застосування комп’ютерів,
+							професіонали в інших галузях обчислень, технічні фахівці в галузі
+							обчислювальної техніки, техніки-програмісти, фахівець з
+							інформаційних технологій, фахівець з розробки та тестування
+							програмного забезпечення. й на інших посадах сфери IT
+							<a target="_blank" href="http://kbpz.kntu.kr.ua/vupysk/"
+								>дізнатись більше</a
+							>. Під час навчання за ІТ-спеціальністю “Комп’ютерна інженерія”
+							<a target="_blank" href="http://kbpz.kntu.kr.ua/pravstyp/"
+								>дізнатись більше</a
+							>
+							здобувачі вищої освіти вивчають новітні IT-технології, опановують
+							розробку WEB-орієнтованих програмних систем на сучасних мовах
+							програмування С/С++, Python, Visual C#, Microsoft DOT NET
+							Framework, Java, Android API, HTML, CSS, JavaScript, PHP, MySQL,
+							ASP.NET, WordPress, SQL, XML, Interbase, Oracle та ін. Наші
+							студенти опановують проєктування і розробку комп'ютерних мереж,
+							управління й адміністрування комп'ютерних мереж. Детально з
+							освітньою програмою можна ознайомитися на вебсайті кафедри
+							<a target="_blank" href="http://kbpz.kntu.kr.ua/"
+								>дізнатись більше</a
+							>. Магістр може продовжувати освіту за третім освітньо-науковим
+							рівнем вищої освіти чи за програмою магістратури з інших галузей
+							знань, а також підвищувати кваліфікацію та отримувати додаткову
+							післядипломну освіту. Будь айтішним! Вступай на ІТ-спеціальність
+							ЦНТУ
+							<a target="_blank" href="http://kbpz.kntu.kr.ua/infbyk/"
+								>дізнатись більше</a
+							>.
 						</div>
 						<div class="flex__center mt-20">
 							<a href="#" class="custom-btn btn-15 btn--p">Заповнити форму</a>
