--- a/special/higher/24.html
+++ b/special/higher/24.html
@@ -63,14 +63,14 @@
 					<div class="flex__cart">
 						<div class="flex__center__row">
 							<div class="flex__item">
-								<a href="https://kntuua.github.io/University/abitur/2.html">
+								<a href="https://kntuua.github.io/University/abitur/1.html">
 									<i class="fas fa-arrow-circle-left"></i>
 								</a>
-								<a href="http://management.kntu.kr.ua/" target="_blank">
+								<a href="http://kbpz.kntu.kr.ua/" target="_blank">
 									<i class="fas fa-university"></i>
 								</a>
 								<a
-									href="https://www.facebook.com/%D0%95%D0%9C%D0%9A%D0%94-655431748209512/"
+									href="https://m.facebook.com/groups/itkntu/"
 									target="_blank"
 								>
 									<i class="fab fa-facebook-square"></i>
@@ -78,38 +78,41 @@
 							</div>
 							<div class="flex__item">
 								<div class="flex__center">
-									<div class="flex__subtitle">Номер: 281</div>
+									<div class="flex__subtitle">Номер: 122</div>
 									<div class="flex__subtitle">Назва спеціальності:</div>
-									<h1 class="flex__title">
-										Публічне управління та адміністрування
-									</h1>
+									<h1 class="flex__title">Комп’ютерні науки</h1>
 								</div>
 							</div>
 						</div>
 						<div class="flex__img">
 							<img
 								class="p-auto"
-								src="../../img/addSpecialties/22/1.webp"
+								src="../../img/addSpecialties/24/1.webp"
 								alt="#"
 							/>
 							<img
 								class="p-auto"
-								src="../../img/addSpecialties/22/2.webp"
+								src="../../img/addSpecialties/24/2.webp"
 								alt="#"
 							/>
 							<img
 								class="p-auto"
-								src="../../img/addSpecialties/22/3.webp"
+								src="../../img/addSpecialties/24/3.webp"
 								alt="#"
 							/>
 						</div>
 						<div class="flex__text">
-							Під час навчання за даною спеціальністю студенти отримують знання з теорії публічного адміністрування, конституційного права, основ місцевого самоврядування, державного регулювання економіки та економічної політики, територіального управління, планування розвитку територій, публічних фінансів, комунікації в публічному управлінні, технологій публічного адміністрування, PR-технологій, проєктного менеджменту, соціального розвитку територій, інформаційно-аналітичного забезпечення публічного адміністрування.
-							Випускники здатні обіймати посади керівників, провідних і головних спеціалістів міністерств та інших центральних органів виконавчої влади, спеціалістів місцевих державних адміністрацій, закладах вищої освіти, академічних установ, корпоративних установ та бізнес-структур, їх управлінь і відділів; посади радників, консультантів секретаріатів місцевих рад, політичних партій та громадських організацій, спеціалістів виконавчих органів місцевих рад, спеціалістів виконавчих органів сільських, селищних рад та громад.
+							Магістри за освітньою програмою “Комп’ютерні науки” <a target="_blank" href="http://kbpz.kntu.kr.ua/122mag/">дізнатись більше</a>  готуються для роботи в галузі інформаційної аналітики для усіх видів економічної, політичної та соціальної сфер діяльності, здатних забезпечити генерацію нових знань та інформаційну підтримку прийняття рішень.
+							Поглиблені теоретичні та практичні знання в галузі комп’ютерних наук з акцентом на формування навичок створення та практичної реалізації інновацій в галузі інформаційних технологій для різних галузей людської діяльності. Можливість спеціалізації в напрямках захисту інформаційних технологій.
+							Інтегральна компетентність: здатність розв’язувати складні спеціалізовані задачі та практичні проблеми в галузі комп’ютерних наук або у процесі навчання, що передбачає застосування теорій та методів комп’ютерних наук, інформаційних технологій і характеризується комплексністю та невизначеністю умов.
+							Здобувачі вищої освіти за ІТ-спеціальністю “Комп’ютерні науки” <a target="_blank" href="http://kbpz.kntu.kr.ua/pravstyp/">дізнатись більше</a> під час навчання вивчають новітні IT-технології й мови програмування, серед яких Python, Visual C#, С/С++, Microsoft DOT NET, Framework Java, Android API, HTML, CSS, JavaScript, PHP, MySQL, ASP.NET, WordPress, DrupalSQL, XML, Paradox, Interbase, Oracle і інші.
+							Посади, на яких зможуть працювати випускники згідно з ДК 003:2010: адміністратор бази даних, адміністратор даних, адміністратор доступу, адміністратор системи, аналітик комп’ютерних систем, аналітик операційного та прикладного програмного забезпечення, інженер з програмного забезпечення комп’ютерів, інженер-програміст, програміст (база даних), програміст прикладний, інженер із застосування комп’ютерів.
+							й на інших посадах сфери IT <a target="_blank" href="http://kbpz.kntu.kr.ua/vupysk/">дізнатись більше</a>.
+							Магістр може продовжувати освіту за третім (освітньо-науковим) рівнем вищої освіти чи за програмою магістратури з інших галузей знань, а також підвищувати кваліфікацію та отримувати додаткову післядипломну освіту.
 						</div>
 						<div class="flex__center mt-20">
 							<a
-								href="https://forms.gle/4NA5C23U4DuZAx4a8"
+								href="https://docs.google.com/forms/d/1tUEB7YXicGwxzvaGyFRLxXtBv9DNw-shu2h2DacURsc/edit?usp=sharing"
 								class="custom-btn btn-15 btn--p"
 								>Заповнити форму</a
 							>
