--- a/special/higher/24.html
+++ b/special/higher/24.html
@@ -109,6 +109,8 @@
 							Посади, на яких зможуть працювати випускники згідно з ДК 003:2010: адміністратор бази даних, адміністратор даних, адміністратор доступу, адміністратор системи, аналітик комп’ютерних систем, аналітик операційного та прикладного програмного забезпечення, інженер з програмного забезпечення комп’ютерів, інженер-програміст, програміст (база даних), програміст прикладний, інженер із застосування комп’ютерів.
 							й на інших посадах сфери IT <a target="_blank" href="http://kbpz.kntu.kr.ua/vupysk/">дізнатись більше</a>.
 							Магістр може продовжувати освіту за третім (освітньо-науковим) рівнем вищої освіти чи за програмою магістратури з інших галузей знань, а також підвищувати кваліфікацію та отримувати додаткову післядипломну освіту.
+
+							Будь айтішним! Вступай на ІТ-спеціальність ЦНТУ <a target="_blank" href="http://kbpz.kntu.kr.ua/infbyk/">дізнатись більше</a>.
 						</div>
 						<div class="flex__center mt-20">
 							<a
