Додав текст у 208 та 071 спеціальність

--- a/special/higher/19.html
+++ b/special/higher/19.html
@@ -102,22 +102,7 @@
 							/>
 						</div>
 						<div class="flex__text">
-							Під час навчання за спеціальністю «Агроінженерія» студенти
-							вивчають основи управління підприємствами та способи організації і
-							зниження витрат у аграрному і промисловому виробництвах, сучасні
-							комп’ютерні технології і основи дизайну, 2D і 3D проектування і
-							друк. Близько половини предметів для вивчення студенти обирають
-							самі. Випускники спеціальності «Агроінженерія» мають достатню
-							підготовку для створення власного бізнесу – аграрного,
-							переробного, промислового та іншого виробництва, торгівлі,
-							обслуговування тощо. Крім того, агроінженер може працювати на
-							керівних посадах аграрних, переробних і промислових підприємств,
-							установ, організацій, виконувати функції інженера, дизайнера,
-							механіка, конструктора, постачальника, менеджера з продажу:
-							техніки, запчастин, обладнання, зерна, насіння, добрив, засобів
-							захисту рослин тощо. Стажування і практика на підприємствах Європи
-							не обов’язкова, але доступна для студентів, хто хоче сумістити
-							цікаве і корисне!" ОПП «Технічний сервіс сільськогосподарської
+							ОПП «Технічний сервіс сільськогосподарської
 							техніки» (магістри) Освітньо-професійна програма «Технічний сервіс
 							сільськогосподарської техніки» спеціальності 208 «Агроінженерія»
 							орієнтована на підготовку висококваліфікованих фахівців, які
