--- a/special/higher/4.html
+++ b/special/higher/4.html
@@ -99,71 +99,9 @@
 							/>
 						</div>
 						<div class="flex__text">
-							Магістр Спеціальність 071 «Облік і оподаткування» - одна з
-							найбільш популярних спеціальностей економічного спрямування в
-							галузі знань 07 «Управління та адміністрування», орієнтована на
-							урахування сучасних вимог ринку праці щодо підготовки
-							висококваліфікованих фахівців у сфері оподаткування,
-							обліково-економічної, контрольно-аналітичної, аудиторської
-							діяльності, забезпечення фінансової стабільності суб’єктів
-							господарювання, у тому числі й у бюджетній та банківській сферах.
-							Це базова, універсальна економічна спеціальність для тих, хто
-							прагне зрозуміти загальні принципи формування економічної
-							інформації, яка використовується у процесі управління
-							підприємствами, установами, організаціями. Під час навчання за
-							спеціальністю 071 «Облік і оподаткування» здобувачі другого
-							(магістерського) рівня вищої освіти можуть обрати для себе
-							конкретну освітньо-професійну програму: «Адміністрування податків
-							та митних платежів», «Аудит, державний фінансовий контроль та
-							експертиза», «Облік і оподаткування в управлінні підприємницькою
-							діяльністю та державним сектором економіки». Освітньо-професійні
-							програми мають прикладну орієнтацію та спрямовані на підготовку
-							фахівців, які володіють фундаментальними теоретичними знаннями та
-							практичними навичками з питань методології, методики та
-							організації аудиту, державного фінансового контролю та експертизи,
-							адміністрування податків та митних платежів, облікового
-							супроводження внутрішньогосподарського, фінансового, податкового
-							менеджменту, здійснення аналітично-контрольних процедур, аудиту,
-							податкових розрахунків суб’єктів підприємницької діяльності та
-							установ державного сектору, формування та аналізу всіх видів
-							звітності, володіють методологією наукової діяльності та можуть
-							проводити власні наукові дослідження з актуальних проблем у
-							професійній сфері, здатні здійснювати професійну діяльність та
-							вирішувати складні завдання щодо інформаційного забезпечення
-							прийняття управлінських рішень. Є можливість отримання подвійних
-							дипломів магістра на базі договору про співпрацю із Wyzsza Szkola
-							Gospodarki – Університетом економіки (Bydgoszcz, Poland – м.
-							Бидгощ, Польща). Випускники магістратури за спеціальністю 071
-							«Облік і оподаткування» отримують навички розв’язання складних
-							спеціалізованих задач та практичних проблем під час професійної
-							діяльності у сфері обліку, аналізу, контролю, аудиту та
-							оподаткування. Можуть займатися дослідницькою та викладацькою
-							діяльністю у сфері інформаційного забезпечення управління та
-							оподаткування, адміністративною та управлінською діяльністю з
-							обліку та оподаткування в комерційних підприємствах та установах
-							державного сектору, в системі державного фінансового контролю, в
-							податкових органах, у сфері фінансово-господарського забезпечення
-							районних та обласних державних адміністрацій на посадах керівника
-							підприємства (установи, організації), підрозділу у сфері освіти та
-							виробничого навчання, керівного працівника апарату центральних і
-							місцевих органів державної влади та місцевого самоврядування,
-							керівника фінансового, бухгалтерського, економічного,
-							адміністративного підрозділу, керівника малого підприємства без
-							апарату управління, менеджера (управителя) у фінансовій
-							діяльності, у сфері надання інформації, досліджень та розробок,
-							професіонала з питань фінансово-економічної безпеки підприємства
-							(установи, організації), професіонала державної служби, головного
-							бухгалтера, головного економіста, менеджера, фінансиста, аудитора,
-							аналітика, податкового консультанта та радника з економічних
-							питань, фахівця з податкового планування та податкового контролю.
-							Поглиблене вивчення мов, постійна апробація своїх знань та навичок
-							на конференціях, а також під час стажування та проходження
-							практики. Стабільно високий попит на фахівців з обліку та
-							оподаткування на ринку праці! Широкі можливості для
-							працевлаштування та побудови кар’єри! Високий рівень оплати праці!
-							Більш детальну інформацію можна отримати за посиланням:
-							<a href="http://audit.kntu.kr.ua/join_the_university/MASTER.html"
-								>дізнатися більше</a
+							За спеціальністю 071 «Облік і оподаткування» акредитовані освітні програми: «Облік і оподаткування в управлінні підприємницькою діяльністю та державним сектором економіки»; «Адміністрування податків та митних платежів»; та освітньо-наукова програма «Аудит, державний фінансовий контроль та експертиза». Є можливість отримання подвійних дипломів магістра на базі договору про співпрацю із Wyzsza Szkola Gospodarki – Університетом економіки (Bydgoszcz, Poland – м. Бидгощ, Польща). Випускники отримують уміння здійснювати адміністративну та управлінську діяльність з обліку та оподаткування на комерційних підприємствах та установах державного сектору, в системі державного фінансового контролю, в податкових органах, в фінансово-кредитних установах, у сфері фінансово-господарського забезпечення районних та обласних державних адміністрацій, можуть займатися дослідницькою та викладацькою діяльністю. Наявні широкі можливості для працевлаштування та побудови кар’єри  на посадах: керівника підприємства (установи, організації),  керівного працівника апарату центральних і місцевих органів державної влади та місцевого самоврядування, керівника фінансового, бухгалтерського, економічного, адміністративного підрозділу,  головного бухгалтера, головного економіста, менеджера, фінансиста, аудитора, аналітика, податкового консультанта та радника з економічних питань. Більш детальну інформацію можна отримати за посиланням: 
+							<a target="_blank" href="http://audit.kntu.kr.ua/join_the_university/MASTER.html"
+								>дізнатися більше.</a
 							>
 						</div>
 						<div class="flex__center mt-20">
