Added a link to 029 032 specialty

--- a/special/higher/1.html
+++ b/special/higher/1.html
@@ -142,7 +142,7 @@
 							професійного зростання!
 						</div>
 						<div class="flex__center mt-20">
-							<a href="#" class="custom-btn btn-15 btn--p">Заповнити форму</a>
+							<a href="https://forms.gle/VT9Gm1YS3aueYm5X8" class="custom-btn btn-15 btn--p">Заповнити форму</a>
 						</div>
 					</div>
 				</div>
