--- a/special/higher/2.html
+++ b/special/higher/2.html
@@ -131,7 +131,7 @@
 							та археологія».
 						</div>
 						<div class="flex__center mt-20">
-							<a href="#" class="custom-btn btn-15 btn--p">Заповнити форму</a>
+							<a href="https://forms.gle/zX1vUk6Y4K6aQtfV8" class="custom-btn btn-15 btn--p">Заповнити форму</a>
 						</div>
 					</div>
 				</div>
