Changed the text in 051 specialty

--- a/special/middle/3.html
+++ b/special/middle/3.html
@@ -99,20 +99,8 @@
 							/>
 						</div>
 						<div class="flex__text">
-							HR - management - душа та серце кожної компанії, підприємства та
-							організації. Лише профі задасть темп, створить клімат і відкриє
-							потенціал кожного! Саме такі навички легко отримати, вивчаючи
-							кадровий менеджмент, управління кар’єрою та трудовим потенціалом,
-							кадрове діловодство, фізіологію і психологію праці, управління та
-							мотивацію персоналу, управління виробничими конфліктами, аудит
-							персоналу та сучасний рекрутинг, маркетинг, демографію та
-							національну економіку тощо. Випускники володіють знаннями та
-							практичними навичками відбору, оцінки та мотивації персоналу,
-							кар’єрного коучингу, управління кадровим резервом; удосконалення
-							систем і технологій управління персоналом, інжинірингу праці;
-							проведення корпоративних тренінгів, організації ділових зустрічей
-							і конференц-сервісу. ЕМКД платформа росту успішних професіоналів!
-							З нами рости легко!
+							Під час навчання студенти вивчають кадровий менеджмент, управління кар’єрою та трудовим потенціалом, кадрове діловодство, фізіологію і психологію праці, управління та мотивацію персоналу, управління виробничими конфліктами, аудит персоналу та сучасний рекрутинг, маркетинг, демографію та національну економіку, тощо.  
+							Випускники володіють знаннями та практичними навиками відбору, оцінки та мотивації персоналу, кар’єрного коучингу, управління кадровим резервом; удосконалення систем і технологій управління персоналом, інжинірингу праці; проведення корпоративних тренінгів, організації ділових зустрічей і конференц-сервісу. Наші випускники працевлаштовуються в Україні та за її межами.
 
 							<div class="flex__center mt-20">
 								<a
