--- a/special/middle/9.html
+++ b/special/middle/9.html
@@ -111,7 +111,7 @@
 							екологічно свідомих лідерів, які здатні змінювати світ на краще!
 						</div>
 						<div class="flex__center mt-20">
-							<a href="#" class="custom-btn btn-15 btn--p">Заповнити форму</a>
+							<a href="https://forms.gle/a35LV8BhRmvNi1n76" class="custom-btn btn-15 btn--p">Заповнити форму</a>
 						</div>
 					</div>
 				</div>
